--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,5 @@
 body {
+  color: #fff;
   font-family: 'Fira Code', Arial, Helvetica, sans-serif;
 }
 
@@ -10,8 +11,7 @@ header {
   border-bottom: 10px solid #000;
 }
 
-h1 {
-  color: #fff;
+.logo {
   font-family: 'Press Start 2P', cursive;
   font-size: 2rem;
   font-weight: bolder;
@@ -35,20 +35,22 @@ a {
   color: #fff;
   text-decoration: none;
   font-size: 20px;
+}
+
+li a {
   margin-right: 30px;
 }
 
-#button {
+.button {
   display: inline-block;
   background-color: #2f97c1;
   padding: 18px 20px;
   box-sizing: border-box;
   box-shadow: 5px 5px 0px #000;
-  margin-right: 0px;
   transition: transform 0.1s linear;
 }
 
-#button:hover {
+.button:hover {
   background-color: #fff;
   color: #2f97c1;
   transition: 0.4s;
@@ -62,4 +64,60 @@ a {
   background-color: #2f97c1;
   margin-right: 10px;
   content: '';
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  font-family: 'Press Start 2P', cursive;
+  width: 100%;
+  height: 797px;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url(../assets/img/background.jpg) no-repeat center/cover;
+}
+
+.card-main {
+  margin-top: 100px;
+  margin-left: 90px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 627px;
+  height: 184px;
+  background-color: #3a4042;
+  box-shadow: 5px 5px 0px #000;
+}
+
+.card-main h1 {
+  font-size: 40px;
+  color: #2f97c1;
+  text-shadow: 5px 5px 0px #000;
+}
+
+.card-main p {
+  font-size: 30px;
+}
+
+h1,
+p {
+  padding: 10px 20px;
+  font-size: 1.5rem;
+}
+
+.mini-card {
+  font-family: 'Fira Code', Arial, Helvetica, sans-serif;
+  width: 627px;
+  justify-content: space-around;
+  margin-left: 90px;
+  margin-top: 50px;
+}
+
+.card1,
+.card2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 170px;
+  height: 60px;
+  font-size: 18px;
 }
