--- a/css/index.css
+++ b/css/index.css
@@ -67,24 +67,12 @@ li a {
 }
 
 main {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  height: 797px;
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* width: 100%; */
+  /* height: 797px; */
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url(../assets/img/background.jpg) no-repeat center/cover;
-}
-
-.card-main {
-  margin-top: 100px;
-  margin-left: 90px;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 627px;
-  height: 184px;
-  background-color: #3a4042;
-  box-shadow: 5px 5px 0px #000;
 }
 
 .mini-card {
