--- a/css/components/box.css
+++ b/css/components/box.css
@@ -1,10 +1,14 @@
-#box {
+.box {
   display: inline-block;
-  /* margin-top: 100px;
-  margin-left: 90px; */
-  text-align: center;
-  padding: 42px 44px;
-  /* width: 627px; */
   background-color: #3a4042;
   box-shadow: 10px 10px 0px #000;
+  text-align: center;
+  padding: 42px 44px;
+  /* margin-top: 100px;
+  margin-left: 90px; */
+  /* width: 627px; */
+}
+
+.box .title {
+  margin-bottom: 28px;
 }
