--- a/css/index.css
+++ b/css/index.css
@@ -1,16 +1,3 @@
-body {
-  color: #fff;
-  font-family: 'Fira Code', Arial, Helvetica, sans-serif;
-}
-
-header {
-  display: flex;
-  justify-content: space-between;
-  padding: 10px 20px;
-  background-color: #587291;
-  border-bottom: 10px solid #000;
-}
-
 .logo {
   font-family: 'Press Start 2P', cursive;
   font-size: 2rem;
@@ -19,76 +6,19 @@ header {
   text-shadow: 5px 5px 0px #000;
 }
 
-section,
-nav {
-  display: flex;
-}
-
-ul {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  list-style: none;
-}
-
-a {
-  color: #fff;
-  text-decoration: none;
-  font-size: 20px;
-}
-
-li a {
-  margin-right: 30px;
-}
-
-.button {
-  display: inline-block;
-  background-color: #2f97c1;
-  padding: 18px 20px;
-  box-sizing: border-box;
-  box-shadow: 5px 5px 0px #000;
-  transition: transform 0.1s linear;
-}
-
-.button:hover {
-  background-color: #fff;
-  color: #2f97c1;
-  transition: 0.4s;
-  transform: scale(1.08);
-}
-
-.nav::before {
-  display: inline-block;
-  width: 10px;
-  height: 10px;
-  background-color: #2f97c1;
-  margin-right: 10px;
-  content: '';
-}
 
 main {
-  /* display: flex; */
-  /* flex-direction: column; */
-  /* width: 100%; */
-  /* height: 797px; */
+  /* display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 797px; */
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url(../assets/img/background.jpg) no-repeat center/cover;
 }
 
 .mini-card {
-  font-family: 'Fira Code', Arial, Helvetica, sans-serif;
   width: 627px;
   justify-content: space-around;
   margin-left: 90px;
   margin-top: 50px;
-}
-
-.card1,
-.card2 {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 170px;
-  height: 60px;
-  font-size: 18px;
 }
