--- a/css/components/section.css
+++ b/css/components/section.css
@@ -1,5 +1,6 @@
 .section {
   background-color: #2f97c1;
-  padding: 50px 0 100px;
+  padding-top: 50px;
+  padding-bottom: 100px;
   border-bottom: 10px solid #587291;
 }
