--- a/css/components/skill-tec.css
+++ b/css/components/skill-tec.css
@@ -2,14 +2,21 @@
   display: flex;
   font-family: 'Press Start 2P', cursive;
   font-size: 25px;
+  align-items: center;
+  margin-bottom: 30px;
 }
 
 .skill-tec .icon {
   margin-right: 25px;
+  width: 90px;
 }
 
 .skill-tec .right {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+}
+
+.skill-tec .title {
+  margin-bottom: 10px;
 }
