--- a/css/components/main-banner.css
+++ b/css/components/main-banner.css
@@ -7,13 +7,13 @@
   padding: 115px 0 0 90px;
 }
 
-.main-banner .box {
+.main-banner .main-box {
   margin-bottom: 40px;
 }
 
 .main-banner .wrapper {
   display: flex;
-  flex-direction: column;
+  flex-direction: column; 
   width: 640px;
 }
 
